fix: 🐛 z-index of .oo-ui-windowManager-modal > .oo-ui-dialog

--- a/skinStyles/ooui/oojs-ui-windows.less
+++ b/skinStyles/ooui/oojs-ui-windows.less
@@ -123,6 +123,7 @@
 }
 
 .oo-ui-windowManager-modal > .oo-ui-dialog {
+	z-index: @z-index-overlay;
 	background-color: var( --background-color-overlay--lighter );
 }
 
